# coolstring

./: README.md  pyproject.toml
docs/source/: reference.rst
src/coolstring/: CoolString.py
