[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "coolstring"
version = "0.0.1"
authors = [
  { name="DouglasAdams_42", email="douglasadams_42@gmx.de" },
]
description="A fun implementation of a string that can perform several operators and more"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent"
]
